<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Настройки кота">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cat_key"
            android:summary="Доступно для владельцев котов"
            android:title="У вас есть кот?" />
        <SwitchPreference
            android:dependency="cat_key"
            android:key="glad"
            android:summaryOff="Вы уверены, что не будете гладить кота?"
            android:summaryOn="Гладить кота?"
            android:switchTextOff="Нет"
            android:switchTextOn="Да" />
        <EditTextPreference
            android:dependency="cat_key"
            android:key="catfood"
            android:summary="Угости кота"
            android:title="Подарки для кота" />
        <com.example.ma_ex_26.SeekBarDialogPreference
            android:dependency="cat_key"
            android:defaultValue="20"
            android:dialogMessage="Выберите нужное значение:"
            android:key="pref_height"
            android:max="50"
            android:summary="Высота кота в см"
            android:title="Рост кота"
            custom:min="1"
            custom:progressTextSuffix=" см" />
        <com.example.ma_ex_26.NumberPickerDialogPreference
            android:defaultValue="200"
            android:dependency="cat_key"
            android:dialogMessage="Выберите суточный паёк для кота в граммах:"
            android:max="250"
            android:title="Печёнка для кота (гр)"
            android:key="pref_picker"
            custom:min="100" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Настройки рингтона">
        <RingtonePreference
            android:key="setting_ringtone"
            android:showSilent="true"
            android:summary="Устанавливает мелодию для звонка (вкл. или выкл.)"
            android:title="Выбрать рингтон" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Настройки текста">

        <EditTextPreference
            android:defaultValue="14"
            android:dialogTitle="Введите размер шрифта (от 5 до 60)"
            android:key="@string/pref_size"
            android:summary="Устанавливает новый размер шрифта"
            android:title="Размер шрифта" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="Выберите стиль для шрифта"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:key="@string/pref_style"
            android:summary="Устанавливает стиль для шрифта"
            android:title="Стиль для шрифта" />

        <PreferenceScreen
            android:key="@string/pref_color"
            android:summary="Устанавливает цвет для текста"
            android:title="Цвет текста">

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/pref_color_black"
                android:summary="Устанавливает черный цвет"
                android:title="Черный" />
            <CheckBoxPreference
                android:key="@string/pref_color_red"
                android:summary="Устанавливает красный цвет"
                android:title="Красный" />
            <CheckBoxPreference
                android:key="@string/pref_color_green"
                android:summary="Устанавливает зеленый цвет"
                android:title="Зеленый" />
            <CheckBoxPreference
                android:key="@string/pref_color_blue"
                android:summary="Устанавливает синий цвет"
                android:title="Синий" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="Системные настройки">
        <PreferenceScreen
            android:summary="Импортированная системная настройка"
            android:title="Настройка через намерение">
            <intent android:action="android.settings.AIRPLANE_MODE_SETTINGS" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="Запуск сайта через Intent" >
        <PreferenceScreen
            android:summary="developer.alexanderklimov.ru/android"
            android:title="Освой Android играючи" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://developer.alexanderklimov.ru/android/" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>